--- a/index.html
+++ b/index.html
@@ -53,6 +53,8 @@
     </div>
    
 </nav>
+<main>
+
 
 <!-- show case -->
 <section class="showcase bg-light text-dark p-5 p-lg-0 pt-lg-5 text-center text-sm-start">
@@ -79,7 +81,7 @@
                 </div>
               </form>
           </div>
-          <img class="img-fluid w-50  d-sm-block" src="images/illustration-1.svg" alt="">
+          <img class="img-fluid w-50  d-sm-block" src="images/illustration-1.svg" alt="illustration-1">
 
       </div>
 
@@ -104,12 +106,12 @@
               </p>
 
               <div class="alert alert-light text-primary d-block lead text-decoration-underline" role="alert">
-                See how Fylo works <img src="images/icon-arrow.svg" alt="">
+                See how Fylo works <img src="images/icon-arrow.svg" alt="icon-arrow">
               </div>
 
               <div class="card" style="width: 18rem;">
                 <div class="card-body">
-                  <img src="images/icon-quotes.svg" alt="">
+                  <img src="images/icon-quotes.svg" alt="icon-a-quotes">
                   <p class="card-text">Fylo has improved our team productivity by an order of magnitude. Since 
                     making the switch our team has become a well-oiled collaboration machine.</p>
                    
@@ -129,7 +131,7 @@
           </div>
 
           <div class="col-md">
-              <img src="images/illustration-2.svg" class="img-fluid" alt="">
+              <img src="images/illustration-2.svg" class="img-fluid" alt="illustration-2">
           </div>
 
       </div>
@@ -210,6 +212,8 @@
   </div>
 
 </section>
+
+</main>
   
   
   
