--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <nav class="navbar navbar-expand-lg bg-light navbar-light py-3 fixed-top">
     <div class="container">
       <a class="navbar-brand" href="#">
-        <img src="images/logo.svg" alt="" width="80" height="24">
+        <img src="images/logo.svg" alt="logo" width="80" height="24">
       </a>
         <button
          class="navbar-toggler" 
