--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 </head>
 <body>
   <!-- nav bar -->
+  <header>
   <nav class="navbar navbar-expand-lg bg-light navbar-light py-3 fixed-top">
     <div class="container">
       <a class="navbar-brand" href="#">
@@ -53,11 +54,13 @@
     </div>
    
 </nav>
+</header>
+
 <main>
 
 
 <!-- show case -->
-<section class="showcase bg-light text-dark p-5 p-lg-0 pt-lg-5 text-center text-sm-start">
+<section class="showcase bg-white text-dark p-5 p-lg-0 pt-lg-5 text-center text-sm-start">
 
   <div class="container">
 
@@ -105,11 +108,11 @@
                 live collaboration. No email attachments required!
               </p>
 
-              <div class="alert alert-light text-primary d-block lead text-decoration-underline" role="alert">
+              <div class="bg-transparent alert alert-light text-primary d-block lead text-decoration-underline" role="alert">
                 See how Fylo works <img src="images/icon-arrow.svg" alt="icon-arrow">
               </div>
 
-              <div class="card" style="width: 18rem;">
+              <div class="card shadow p-3 mb-5 bg-body rounded" style="width: 18rem;">
                 <div class="card-body">
                   <img src="images/icon-quotes.svg" alt="icon-a-quotes">
                   <p class="card-text">Fylo has improved our team productivity by an order of magnitude. Since 
